upload all files

--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>น้ำยารมดำโลหะ (Blackening) | Baume Chemical</title>
 
-  <!-- === SEO === -->
+  <!-- === SEO (aligned & consistent) === -->
   <meta name="description" content="น้ำยารมดำสำหรับทองเหลือง ทองแดง เหล็ก สังกะสี และอลูมิเนียม แบบจุ่มเย็น ใช้งานง่าย สีสม่ำเสมอ ช่วยลดแสงสะท้อนและเสริมการป้องกันการกัดกร่อน">
-  <meta name="robots" content="index,follow">
+  <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
 
@@ -19,6 +19,7 @@
   <meta property="og:description" content="โซลูชันรมดำโลหะ: Brass, Copper, Steel, Zinc, Aluminium — จุ่มเย็น สีดำสม่ำเสมอ เคลือบแลคเกอร์/น้ำมันปิดผิวได้">
   <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg">
+  <meta property="og:image:alt" content="Blackened metal parts — brass, copper, steel, zinc, aluminium">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Structured Data (JSON-LD) -->
@@ -48,7 +49,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Blackening","item":"https://www.baumechemical.com/products/blackening/"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
+      {"@type":"ListItem","position":3,"name":"Blackening","item":"https://www.baumechemical.com/products/blackening/"}
     ]
   }
   </script>
@@ -56,11 +58,12 @@
   {
     "@context":"https://schema.org",
     "@type":"ItemList",
+    "name":"Blackening product list",
     "itemListElement":[
-      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening","name":"Blackening for Brass and Copper"},
-      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening","name":"Blackening for Steel"},
-      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening","name":"Blackening for Zinc"},
-      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening","name":"Blackening for Aluminium"},
+      {"@type":"ListItem","position":1,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#brass-copper","name":"Blackening for Brass and Copper"},
+      {"@type":"ListItem","position":2,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#steel","name":"Blackening for Steel"},
+      {"@type":"ListItem","position":3,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#zinc","name":"Blackening for Zinc"},
+      {"@type":"ListItem","position":4,"url":"https://www.baumechemical.com/products/blackening/troubleshootingblackening#aluminium","name":"Blackening for Aluminium"},
       {"@type":"ListItem","position":5,"url":"https://www.baumechemical.com/products/blackening/troubleshootingpatina","name":"Patina Solution"}
     ]
   }
@@ -73,42 +76,55 @@
 
   <style>
     :root{
-      --brand:#2c5e4e;
-      --brand-2:#387b5b;
-      --accent:#ff9800;
-      --ink:#0f172a;
-      --muted:#5b6675;
-      --bg:#f4f6f5;
-      --radius:14px;
-      --shadow-1:0 8px 26px rgba(2,8,20,.06);
-      --shadow-2:0 16px 40px rgba(2,8,20,.14);
-      --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --brand:#2c5e4e; --brand-2:#387b5b; --accent:#ff9800; --ink:#0f172a; --muted:#5b6675; --bg:#f4f6f5; --radius:14px;
+      --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14); --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
+      --header-h:64px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0}
     body{font-family:'Noto Sans Thai', system-ui, sans-serif; color:var(--ink); background:var(--bg); line-height:1.6}
 
-    /* === Language Switcher === */
-    .lang-fab{
-      position:fixed; top:14px; right:14px; z-index:1100; display:flex; gap:6px;
-      padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px);
-      box-shadow:0 10px 26px rgba(2,8,20,.12);
+    /* ======= Header (overlay on hero) ======= */
+    .site-header{position:absolute; top:0; left:0; right:0; z-index:1400; background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,0)); border-bottom:1px solid rgba(255,255,255,.14)}
+    .site-header .header-inner{max-width:1200px; margin:0 auto; display:flex; align-items:center; justify-content:space-between; min-height:var(--header-h); padding:10px 16px}
+    .brand{display:flex; align-items:center; gap:10px; text-decoration:none}
+    .brand-logo{width:42px;height:42px;border-radius:10px;flex:0 0 42px; background:#e8f1ec var(--logo-url) center/cover no-repeat; box-shadow:0 2px 8px rgba(2,8,20,.15)}
+    .brand-name{font-weight:800; color:#fff; font-size:1.02rem; letter-spacing:.2px}
+    .primary-nav{display:flex; align-items:center; gap:12px}
+    .menu{list-style:none; display:flex; gap:8px; margin:0; padding:0}
+    .menu a{display:inline-block; padding:10px 12px; border-radius:10px; color:#fff; text-decoration:none; font-weight:600}
+    .menu a:hover{background:rgba(255,255,255,.12)}
+    .menu a[aria-current="page"]{background:rgba(255,255,255,.18)}
+    .menu a.cta{border:1px solid rgba(255,255,255,.35)}
+    .menu a.cta:hover{background:#fff; color:#0f172a; border-color:#fff}
+    .nav-toggle{appearance:none; border:0; background:transparent; cursor:pointer; width:38px; height:38px; border-radius:9px; display:none; align-items:center; justify-content:center}
+    .nav-toggle:focus-visible{ outline:2px solid #ffffff; outline-offset:2px }
+    .nav-toggle .bar{ position:relative; width:22px; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before,.nav-toggle .bar::after{ content:""; position:absolute; left:0; right:0; height:2px; background:#fff; border-radius:2px }
+    .nav-toggle .bar::before{ top:-7px } .nav-toggle .bar::after{ top:7px }
+    @media (max-width: 920px){
+      .menu{position:fixed; left:12px; right:12px; top:calc(var(--header-h) + 8px); background:#0f172acc; backdrop-filter: blur(8px); border:1px solid rgba(255,255,255,.18); border-radius:14px; transform:translateY(-12px); opacity:0; pointer-events:none; display:grid; gap:6px; padding:12px; transition:transform .2s ease, opacity .2s ease}
+      .menu li a{ display:block; padding:12px 14px; border-radius:10px }
+      .site-header.open .menu{ transform:none; opacity:1; pointer-events:auto }
+      .nav-toggle{ display:inline-flex }
     }
-    .lang-fab .lang-btn{
-      appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px;
-      font-weight:800; display:flex; align-items:center; gap:6px; color:#0f172a;
-    }
+
+    /* === Language FAB (below header) === */
+    .lang-fab{ position:fixed; top:calc(var(--header-h) + 10px); right:14px; z-index:1100; display:flex; gap:6px; padding:4px; border:1px solid #e2e8f0; border-radius:999px; background:#ffffffcc; backdrop-filter: blur(8px); box-shadow:0 10px 26px rgba(2,8,20,.12) }
+    .lang-fab .lang-btn{ appearance:none; border:0; background:transparent; cursor:pointer; padding:6px 10px; border-radius:999px; font-weight:800; display:flex; align-items:center; gap:6px; color:#0f172a }
     .lang-fab .lang-btn[aria-pressed="true"]{ background: var(--brand-2); color:#fff }
     .lang-fab .flag{ width:20px; height:15px; border-radius:2px; object-fit:cover; box-shadow:0 0 0 1px rgba(0,0,0,.08) }
 
     /* === Hero === */
-    .hero{
-      position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
-      min-height: clamp(420px, 60vh, 620px);
-      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg') center/cover no-repeat;
-    }
+    .hero{ position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff; min-height: clamp(420px, 60vh, 620px) }
+    .hero::before{ content:""; position:absolute; inset:0; background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)), url('https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg') center/cover no-repeat }
+    .hero-inner{ position:relative; z-index:1; padding:26px 16px }
     .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,44px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:900px; margin:0 auto; color:#e6f2ef}
+
+    /* Back-to-home button */
+    .home-back{ display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px; border:1px solid rgba(255,255,255,.6); color:#fff; text-decoration:none; font-weight:800; backdrop-filter: blur(4px) }
+    .home-back:hover{ background:rgba(255,255,255,.12) }
 
     /* === Layout === */
     .wrap{max-width:1200px; margin:auto; padding:34px 16px}
@@ -131,12 +147,10 @@
 
     /* Lift (opt-in) */
     .card.lift{ will-change: transform, box-shadow }
-    @media (hover:hover) and (pointer:fine){
-      .card.lift:hover, .card.lift:focus-within{ transform:translateY(-8px); box-shadow:var(--shadow-2) }
-    }
+    @media (hover:hover) and (pointer:fine){ .card.lift:hover, .card.lift:focus-within{ transform:translateY(-8px); box-shadow:var(--shadow-2) } }
     @media (prefers-reduced-motion: reduce){ .card.lift{ transition:none } }
 
-    /* === Footer (match homepage) === */
+    /* === Footer === */
     .site-footer{background:#0f172a; color:#cbd5e1; margin-top:24px}
     .site-footer a{color:#e2e8f0; text-decoration:none}
     .site-footer a:hover{color:#fff; text-decoration:underline}
@@ -146,7 +160,6 @@
     .footer-brand .ft-head{display:flex; align-items:center; gap:12px; margin:0 0 10px}
     .ft-logo{width:44px; height:44px; border-radius:10px; background:var(--brand); background-image:var(--logo-url); background-size:cover; background-position:center; box-shadow:0 3px 10px rgba(0,0,0,.3)}
     .ft-name{font-weight:800; color:#fff}
-    .ft-desc{margin:6px 0 0; color:#93a4b8; font-size:.96rem}
     .footer-title{margin:0 0 8px; color:#fff; font-weight:800; font-size:1.02rem}
     .footer-list{list-style:none; margin:8px 0 0; padding:0}
     .footer-list li{margin:6px 0}
@@ -158,6 +171,29 @@
   </style>
 </head>
 <body>
+  <!-- === Site Header (logo + menu) === -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <a class="brand" href="/" aria-label="Baume Chemical">
+        <span class="brand-logo" aria-hidden="true"></span>
+        <span class="brand-name">Baume Chemical</span>
+      </a>
+
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="bar" aria-hidden="true"></span>
+      </button>
+
+      <nav class="primary-nav" aria-label="Primary">
+        <ul class="menu">
+          <li><a href="/" class="nav-link">Home</a></li>
+          <li><a href="/about-us.html" class="nav-link">About us</a></li>
+          <li><a href="/products.html" class="nav-link" aria-current="page">Products</a></li>
+          <li><a href="/contact-us.html" class="nav-link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
   <!-- === Language Switcher === -->
   <div class="lang-fab" role="group" aria-label="Language switcher">
     <button class="lang-btn" data-lang="th" aria-pressed="true" title="ภาษาไทย">
@@ -170,16 +206,16 @@
     </button>
   </div>
 
-  <!-- === Hero === -->
-  <header class="hero">
-    <div class="wrap" style="padding:22px 16px">
+  <!-- === Hero (with back-to-home) === -->
+  <section class="hero" aria-label="Blackening hero">
+    <div class="hero-inner wrap">
+      <div style="margin-bottom:12px">
+        <a class="home-back" href="/">← <span data-i18n-key="back_home">หน้าแรก</span></a>
+      </div>
       <h1 data-i18n-key="hero_title">น้ำยารมดำโลหะ (Blackening)</h1>
-      <p data-i18n-key="hero_tagline">
-        สร้างชั้นออกไซด์สีดำบนผิวโลหะเพื่อความสวยงาม ลดแสงสะท้อน และช่วยป้องกันการกัดกร่อน
-        ขั้นตอนแบบจุ่มเย็น คุมง่าย สีสม่ำเสมอ เหมาะกับงานอุตสาหกรรมและงานตกแต่ง
-      </p>
+      <p data-i18n-key="hero_tagline">สร้างชั้นออกไซด์สีดำบนผิวโลหะเพื่อความสวยงาม ลดแสงสะท้อน และช่วยป้องกันการกัดกร่อน ขั้นตอนแบบจุ่มเย็น คุมง่าย สีสม่ำเสมอ เหมาะกับงานอุตสาหกรรมและงานตกแต่ง</p>
     </div>
-  </header>
+  </section>
 
   <!-- === Products Grid === -->
   <main class="wrap">
@@ -194,7 +230,7 @@
           <div class="badge-row"><span class="badge">Cold Immersion</span><span class="badge">Uniform Finish</span></div>
           <h3 data-i18n-key="bc_title">รมดำสำหรับทองเหลือง/ทองแดง</h3>
           <p data-i18n-key="bc_desc">ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว.</p>
-          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html#brass-copper" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -205,7 +241,7 @@
           <div class="badge-row"><span class="badge">Steel</span><span class="badge">Low-Temp</span></div>
           <h3 data-i18n-key="steel_title">รมดำสำหรับเหล็ก</h3>
           <p data-i18n-key="steel_desc">กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง.</p>
-          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html#steel" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -216,7 +252,7 @@
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Uniform Oxide</span></div>
           <h3 data-i18n-key="zinc_title">รมดำสำหรับสังกะสี</h3>
           <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานชุบสังกะสีหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.</p>
-          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html#zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -227,7 +263,7 @@
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
           <p data-i18n-key="al_desc">สารเข้มข้นต้องเจือจาง ใช้ที่อุณหภูมิห้อง 15–27°C (ไม่เกิน 30°C) เพื่อหลีกเลี่ยงการกัดผิวมากเกินไป ให้ชั้นดำสม่ำเสมอบนอลูมิเนียม.</p>
-          <a class="more" href="troubleshootingblackening.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="troubleshootingblackening.html#aluminium" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -248,7 +284,6 @@
   <footer class="site-footer">
     <div class="footer-inner">
       <div class="footer-grid">
-        <!-- แบรนด์ + ที่อยู่/เวลา/โทร -->
         <section class="footer-brand">
           <div class="ft-head">
             <div class="ft-logo" aria-hidden="true"></div>
@@ -262,7 +297,6 @@
           </ul>
         </section>
 
-        <!-- หมวดผลิตภัณฑ์ -->
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
@@ -278,7 +312,6 @@
           </ul>
         </nav>
 
-        <!-- ช่องทางติดต่อ -->
         <section aria-label="ติดต่อเรา">
           <h3 class="footer-title" data-i18n-key="footer_contact">ติดต่อเรา</h3>
           <ul class="footer-list">
@@ -295,8 +328,19 @@
     </div>
   </footer>
 
-  <!-- === JS: reveal + i18n === -->
+  <!-- === JS: nav toggle + reveal + i18n === -->
   <script>
+    // Mobile nav toggle
+    (function(){
+      var header = document.querySelector('.site-header');
+      var toggle = document.querySelector('.site-header .nav-toggle');
+      if(!header || !toggle) return;
+      toggle.addEventListener('click', function(){
+        var opened = header.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', String(opened));
+      });
+    })();
+
     // Reveal on scroll
     const revealEls = document.querySelectorAll('.reveal');
     const revObs = new IntersectionObserver((entries,obs)=>{
@@ -307,6 +351,7 @@
     /* i18n dictionary */
     const I18N = {
       th: {
+        back_home: "หน้าแรก",
         hero_title: "น้ำยารมดำโลหะ (Blackening)",
         hero_tagline: "สร้างชั้นออกไซด์สีดำบนผิวโลหะเพื่อความสวยงาม ลดแสงสะท้อน และช่วยป้องกันการกัดกร่อน ขั้นตอนแบบจุ่มเย็น คุมง่าย สีสม่ำเสมอ เหมาะกับงานอุตสาหกรรมและงานตกแต่ง",
         sec_products: "ผลิตภัณฑ์",
@@ -327,6 +372,7 @@
         footer_copy: "© 2025 Baume Chemical. All rights reserved."
       },
       en: {
+        back_home: "Home",
         hero_title: "Metal Blackening Solutions",
         hero_tagline: "Create a uniform black oxide on metal surfaces for aesthetics, glare reduction, and enhanced corrosion resistance. Cold-immersion process, easy control, ideal for industrial and decorative work.",
         sec_products: "Products",
@@ -354,13 +400,14 @@
     };
 
     function applyLang(lang){
-      document.documentElement.lang = lang === 'en' ? 'en' : 'th';
-      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === lang)));
+      const L = (lang==='en') ? 'en' : 'th';
+      document.documentElement.lang = L;
+      els.langBtns().forEach(btn => btn.setAttribute('aria-pressed', String(btn.dataset.lang === L)));
       els.translatables().forEach(node => {
         const key = node.getAttribute('data-i18n-key');
-        if (key && I18N[lang] && I18N[lang][key]) node.textContent = I18N[lang][key];
+        if (key && I18N[L] && I18N[L][key]) node.textContent = I18N[L][key];
       });
-      try{ localStorage.setItem('lang', lang); }catch(e){}
+      try{ localStorage.setItem('lang', L); }catch(e){}
     }
 
     (function initLang(){
