--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -214,7 +214,7 @@
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Corrosion Protection</span></div>
           <h3 data-i18n-key="zinc_title">ชุบซิงค์ (Zinc Plating)</h3>
           <p data-i18n-key="zinc_desc">สร้างชั้นป้องกันสนิม เงางาม เกาะตัวไว เหมาะกับงานหลุมตื้น โครเมตมีหลายสีและทนสภาพแวดล้อม ใช้แพร่หลายในยานยนต์เพื่อคุ้มค่าและปกป้องชิ้นส่วนหลัก</p>
-          <a class="more" href="zincplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="zincplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -225,7 +225,7 @@
           <div class="badge-row"><span class="badge">Nickel</span><span class="badge">Bright / Hard</span></div>
           <h3 data-i18n-key="nickel_title">ชุบนิกเกิล (Nickel Plating)</h3>
           <p data-i18n-key="nickel_desc">ทั้งแบบมีไฟและไม่ใช้ไฟ เพิ่มความทนสึกหรอ ทนกัดกร่อน และความแข็ง ผิวขาวเงา เหมาะเป็นชั้นรองก่อนชุบอื่น ใช้ได้ทั้งถังกลิ้งและถังแขวน เกาะเร็ว หนา เงา เข้าได้ถึงซอก</p>
-          <a class="more" href="nickelplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="nickelplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -236,7 +236,7 @@
           <div class="badge-row"><span class="badge">Copper</span><span class="badge">Conductivity</span></div>
           <h3 data-i18n-key="copper_title">ชุบทองแดง (Copper Plating)</h3>
           <p data-i18n-key="copper_desc">เพิ่มความนำไฟฟ้า/ความร้อนและการยึดเกาะ เหมาะเป็นชั้นรองก่อนนิกเกิล/โครม ช่วยให้เงา ลดเวลาชุบนิกเกิล และเพิ่มการต้านการกัดกร่อนเมื่อเคลือบโครมทับ</p>
-          <a class="more" href="copperplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="copperplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -247,7 +247,7 @@
           <div class="badge-row"><span class="badge">Brass</span><span class="badge">Decorative</span></div>
           <h3 data-i18n-key="brass_title">ชุบทองเหลือง (Brass Plating)</h3>
           <p data-i18n-key="brass_desc">สีทองสวยงาม นิยมกับงานจิวเวลรี่/ตกแต่ง มักเคลือบแลคเกอร์ทับเพื่อกันหมอง ใช้น้ำยาผสมทองแดง-สังกะสีเป็นหลัก</p>
-          <a class="more" href="brassplating.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="brassplating/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -258,7 +258,7 @@
           <div class="badge-row"><span class="badge">Lacquer</span><span class="badge">UV Resistant</span></div>
           <h3 data-i18n-key="lacquer_title">แลคเกอร์ไฟฟ้า (Electrolytic Lacquer)</h3>
           <p data-i18n-key="lacquer_desc">กันกัดกร่อนสูง เลือกได้หลายเฉดสี ใช้เดี่ยวได้โดยไม่ต้องชุบโลหะอื่น ทน UV สีไม่ซีดแม้โดนแดดนาน</p>
-          <a class="more" href="electrophoreticlacquer.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="electrophoreticlacquer/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
 
@@ -269,7 +269,7 @@
           <div class="badge-row"><span class="badge">White Bronze</span><span class="badge">Cyanide-Free</span></div>
           <h3 data-i18n-key="wb_title">ไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์</h3>
           <p data-i18n-key="wb_desc">สูตรปลอดไซยาไนด์ ลดความเสี่ยงด้านสิ่งแวดล้อม/ความปลอดภัย ผิวขาวเงิน เงา กระจายตัวดี คุมง่าย ลดต้นทุนบำบัด เหมาะกับถังแขวน/ถังกลิ้ง และโลหะฐานหลากหลาย</p>
-          <a class="more" href="cyanide-free-white-bronze.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
+          <a class="more" href="cyanide-free-white-bronze/index.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
     </div>
