upload all files

--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันน้ำยาชุบสังกะสีสำหรับงานอุตสาหกรรม: Cyanide / Acid (Ammonium) / Non-Cyanide ครอบคลุมทั้งถังกลิ้งและถังแขวน เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างานจริง.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="Zincplating.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -18,7 +18,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบสังกะสี (Zinc Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Cyanide / Acid (Ammonium) / Non-Cyanide สำหรับงานถังแขวนและถังกลิ้ง เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน.">
-  <meta property="og:url" content="https://www.baumechemical.com/zincplating">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg
   <meta property="og:image:alt" content="Zinc plating bath with bright finish">
   <meta name="twitter:card" content="summary_large_image">
@@ -41,7 +41,7 @@
     "@type":"CollectionPage",
     "name":"Zinc Plating Solutions",
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/zincplating",
+    "url":"https://www.baumechemical.com/products/platingcoating/zincplating/",
     "description":"Cyanide, Ammonium Acid, and Cyanide-free zinc plating solutions for rack and barrel with strong brightness and distribution."
   }
   </script>
@@ -52,8 +52,8 @@
     "@type":"BreadcrumbList",
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products"},
-      {"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/zincplating"}
+      {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
+      {"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/zincplating/"}
     ]
   }
   </script>
@@ -190,7 +190,7 @@
             <div class="badges"><span class="badge">Cyanide</span><span class="badge">ถังกลิ้งและถังแขวน</span></div>
             <h3 data-i18n-key="cya_title">Cyanide Zinc Plating Solution</h3>
             <p data-i18n-key="cya_desc">การกระจายผิวยอดเยี่ยม คุมง่าย ทนต่อการปนเปื้อนน้ำมัน เงาสูง ทำงานได้ในช่วงความหนาแน่นกระแสกว้าง และเข้ากันได้กับโครเมตทุกเฉด เหมาะทั้งถังแขวนและถังกลิ้ง</p>
-            <a class="more" href="troubleshootingcyanidezinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingcyanidezinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -203,7 +203,7 @@
             <div class="badges"><span class="badge">Acid (Ammonium)</span><span class="badge">High Coverage</span></div>
             <h3 data-i18n-key="acid_title">Ammonium Acid Zinc Plating</h3>
             <p data-i18n-key="acid_desc">กระจายผิวดีแม้พื้นที่กระแสต่ำ/ซอกลึก เบสและไบร์ทเทนเนอร์ละลายง่าย ล้างออกง่าย ช่วยให้โครเมตยึดติดดี ให้ผิวเงาและความหนาสม่ำเสมอ เหมาะกับถังกลิ้ง/ถังแขวน</p>
-            <a class="more" href="troubleshootingacidzinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingacidzinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -216,7 +216,7 @@
             <div class="badges"><span class="badge">Non‑Cyanide</span><span class="badge">NaOH / KOH</span></div>
             <h3 data-i18n-key="ncn_title">Cyanide‑Free Zinc Plating</h3>
             <p data-i18n-key="ncn_desc">ปลอดไซยาไนด์ ลดความเสี่ยงต่อคนและสิ่งแวดล้อม เงาสูง คุมง่าย กระจายผิวดี ใช้ได้กับ NaOH/KOH และชุบได้โดยตรงบนเหล็ก เหล็กผสมตะกั่ว หรือซิงค์ไดคาสต์</p>
-            <a class="more" href="troubleshootingnoncyanidezinc.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+            <a class="more" href="troubleshootingnoncyanidezinc/index.html" target="_blank" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
       </div>
